# django-clerk-react

./: .envexample  .gitignore  README.md  SECURITY.md  docker-compose.yaml
backend/: .dockerignore  .envexample  Dockerfile  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
backend/app/: __init__.py  admin.py  apps.py  authentication.py  celery.py  checks.py  exception_handler.py  health.py  middleware.py  mixins.py  models.py  pagination.py  permissions.py  serializers.py  settings.py  throttles.py  urls.py  views.py  worker.py
backend/app/middleware/: __init__.py  logging.py  tenant.py
backend/app/migrations/: 0001_initial.py  0002_organisation_is_active_and_more.py  0010_credittransaction_unit_rate.py  0012_rename_trial_to_prepaid_add_credit_purchase.py
backend/app/utils/: billing.py  clerk.py  metered_billing.py  storage.py  stripe.py
backend/tests/: __init__.py  conftest.py  factories.py  test_authentication.py  test_entrypoint_role.py  test_exception_handler.py  test_middleware.py  test_mixins.py  test_models.py  test_pagination.py  test_permissions.py  test_serializers.py  test_system_checks.py  test_worker_startup.py
backend/tests/api/: test_billing_endpoint.py  test_clerk_webhook.py  test_config_endpoint.py  test_credit_purchase.py  test_group_schedules_endpoint.py  test_health.py  test_response_contract.py  test_schedule_retry.py  test_send_pipeline.py  test_sms_endpoint.py  test_stripe_webhook.py  test_throttling.py  test_users_endpoint.py
backend/tests/tasks/: test_generate_invoices.py  test_send_message.py  test_signals.py  test_worker_heartbeat.py
backend/tests/utils/: __init__.py  stripe_signing.py  test_billing.py  (+6 more)
(+114 files in other folders)
