[project]
name = "app"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "Django",
    "djangorestframework",
    "django-filter",
    "django-cors-headers",
    "drf-spectacular",
    "sentry-sdk[django,celery]",
    "psycopg[binary]>=3.1.18",
    "PyJWT[crypto]",
    "svix",
    "requests",
    "clerk-backend-api",
    "azure-storage-blob==12.30.0",
    "celery[redis]>=5.3",
    "certifi",  # CA bundle for Redis TLS verification (explicit: security control)
    "stripe>=8.0",
    "redis>=5.0",
    "gunicorn",
    "uvicorn[standard]",
    "whitenoise[brotli]",
    "django-celery-beat",
    "pytest==7.4.3",
    "pytest-django==4.12.0",
    "pytest-cov==4.1.0",
    "factory-boy==3.3.3",
    "freezegun==1.5.5",
    "pytest-xdist==3.8.0",
]
